Projects from JS to Databank

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <div class="project-wrapper">
   <div class="project-info">
-    <p id ="ProjectInfo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, cupiditate recusandae qui perferendis ad quisquam! Impedit, facilis quaerat in ducimus porro, neque animi qui rem id nobis veritatis quia doloribus.</p>
+    <p id ="ProjectInfo"></p>
   </div>
 
   <div class="carousel-wrapper">
@@ -29,6 +29,6 @@
 
 </div>
 </section>
- <script src="script.js"></script>
+ <script type="module" src="script.js"></script>
 </body>
 </html>
