maus grab and select diabled to better scroll

--- a/upload/index.html
+++ b/upload/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head><title>Uploader</title></head>
 <body>
   <h1>Upload läuft…</h1>
   <script type="module" src="upload.js"></script>
 </body>
-</html>
+</html> -->
